FFM-23: Moved navigation to adminhtml.xml, translation modules settings.

--- a/app/locale/nl_NL/JR_CleverCms.csv
+++ b/app/locale/nl_NL/JR_CleverCms.csv
@@ -16,3 +16,4 @@
 "Create Permanent Redirect for URLs if URL Key Changed","Maak een permanente redirect aan voor URL's als de URL-key veranderd."
 "Add Page", "Pagina toevoegen"
 "Edit Page '%s'","Pagina wijzgigen: %s"
+"Show Homepage Link in Navigation Menu","Toon homepagina-link in navigatiemenu"
